--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,17 @@
 ---
-# We create a pipeline
 stages:
   - preflight
   - test
   - push
-#  - notify
 
 variables:
   CI_REGISTRY_URL: registry-test
   CI_REGISTRY_USER: CI
   REGISTRY_IMG_TAG: ${CI_REGISTRY_URL}.${COMPANY_DOMAIN}/${GITLAB_USER}/docker-molecule_debian10:latest
   DOCKERHUB_TAG: ${DOCKERHUB_USER}/ansible_molecule_test_images:debian10
+  DOCKERHUB_USER: lotusnoir
+  GITHUB_USER: lotusnoir
+
 
 ##################################################
 # PREFLIGHT
@@ -31,6 +32,7 @@ hadolint:
   script:
     - hadolint Dockerfile
 
+
 ##################################################
 # TEST BUILD
 ##################################################
@@ -44,14 +46,6 @@ test_build:
     - docker build -t test-build .
     - docker run --name test-build-container --rm test-build systemctl --version
 
-#pytest:
-#  stage: test
-#  script:
-#    - pytest --junitxml=report.xml
-#  artifacts:
-#    when: always
-#    reports:
-#      junit: report.xml
 
 ##################################################
 # PUSH CODE AND IMAGE
@@ -105,17 +99,3 @@ push_src_on_github:
     - git add -A
     - git commit -m "adding features" || echo "No changes, nothing to commit!"
     - git push
-
-##################################################
-# NOTIFY
-##################################################
-#notify:
-#  stage: notify
-#  image: alpine:latest
-#  before_script:
-#    - apk add curl
-#  script:
-#    - |
-#      curl -X POST "https://$GOTIFY_HOST/message?token=$GOTIFY_TOKEN" \
-#           -F "title=CI Build Complete" \
-#           -F "message=Scheduled CI build for Ansible is complete."
