--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 ---
 stages:
-  - preflight
+  - check
   - test
   - push
 
@@ -14,10 +14,10 @@ variables:
 
 
 ##################################################
-# PREFLIGHT
+# CHECKS
 ##################################################
 yamllint:
-  stage: preflight
+  stage: check
   image: sdesbure/yamllint
   before_script:
     - yamllint --version
@@ -25,7 +25,7 @@ yamllint:
     - yamllint .
 
 hadolint:
-  stage: preflight
+  stage: check
   image: hadolint/hadolint:latest-debian
   before_script:
     - hadolint --version
@@ -95,7 +95,6 @@ push_src_on_github:
     - git config --global user.name "${GITHUB_USER}"
     - git config --global init.defaultBranch main
     - COMMENT=$(git log -1 --pretty=%B | head -1)
-    - echo $COMMENT
   script:
     - git clone git@github.com:${GITHUB_USER}/docker-molecule_debian10.git /tmp/docker-molecule_debian10
     - rm -rf .git
