--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,10 +44,10 @@ test_build:
     - docker:dind
   script:
     - docker build -t test-build .
-    - docker stop test-container && docker rm test-container
-    - docker run -d --name=test-container --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro test-build
-    - docker exec test-container systemctl --version
-    - docker stop test-container && docker rm test-container
+    - docker stop test-debian10 && docker rm test-debian10
+    - docker run -d --name=test-debian10 --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro test-build
+    - docker exec test-debian10 systemctl --version
+    - docker stop test-debian10 && docker rm test-debian10
 
 
 ##################################################
