--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,8 +44,8 @@ test_build:
     - docker:dind
   script:
     - docker build -t test-build .
-    - docker stop test-debian10 && docker rm test-debian10
-    - docker run -d --name=test-debian10 --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro test-build
+    - docker stop test-debian10 || true && docker rm test-debian10 || true
+    - docker run -d --name=test-debian10 --cgroupns host --volume=/sys/fs/cgroup:/sys/fs/cgroup:rw test-build
     - docker exec test-debian10 systemctl --version
     - docker stop test-debian10 && docker rm test-debian10
 
